fix text align

--- a/client/src/styles/components/_splash.scss
+++ b/client/src/styles/components/_splash.scss
@@ -20,7 +20,9 @@
 	animation-iteration-count: 1;
 
 	&--text {
+		padding: 0 2vw;
 		position: absolute;
+		text-align: center;
 	}
 
 	&--text:nth-of-type(1) {
